fixed flex wrapping on desktop and removed un-used images

--- a/src/components/CategoryNav/CategoryNav.scss
+++ b/src/components/CategoryNav/CategoryNav.scss
@@ -20,7 +20,7 @@
 @media screen and (width >= $screen-md-min) {
     .root {
         padding: 0;
-        flex-wrap: wrap;
+        flex-wrap: nowrap;
 
         > nav {
             background-color: transparent;
